welcome.lessons.welcome.bdr.BDR.scala.code
var fini=false
if (litMessage()=="A")
	avance()
else if (litMessage()=="B")
	avance(2)
else if (litMessage()=="R")
	droite()
	avance()	
else if (litMessage()=="L")
	gauche()
	avancer()
else if (litMessage()=="I")
	gauche()
	gauche()
	avancer()
else if (litMessage()=="Z")
	recule()
else if (litMessage()=="X")
	recule(3)
else fini=true			